modified the eloquent relationship between product, order, and user to user seller_id instead of user_id for more clarity
